@@ -13,6 +13,15 @@
 ; string	== (char *)
 ; stringN	== (char *)		[N>=0]	[show only up to (arg N) bytes]
 
+; ctype.h
+char tolower(char);
+char toupper(char);
+
+; dirent.h
+int closedir(addr);
+addr opendir(string);
+addr readdir(addr);
+
 ; errno.h
 addr __errno_location(void);
 
@@ -60,6 +69,8 @@ int fputc(char,file);
 int fputs(string,file);
 uint fwrite(string,uint,uint,file);
 int printf(format);
+int puts(string);
+int remove(string);
 int sprintf(+string,format);
 
 ; stdlib.h
@@ -92,6 +103,7 @@ string strstr(string,string);
 
 ; sys/stat.h
 int chmod(string,octal);
+int fchmod(int,octal);
 int mkfifo(string,octal);
 octal umask(octal);
 
@@ -138,6 +150,7 @@ uint sleep(uint);
 int symlink(string,string);
 int sync(void);
 string ttyname(int);
+int unlink(string);
 int write(int, string3, uint);
 
 ; SYSCALLS
